# crawl4ai-mcp

./: .dockerignore  .env.example  .gitignore  .npmignore  BEARER_AUTH.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  coverage.xml  crawl4ai-mcp-sse-stdio-1.0.9.tgz  docker-compose.yml  index.js  package.json  pyproject.toml  requirements.txt  rewrite-history.sh  server-config.example.json  server.js  setup.py
.github/: PUBLISHING.md
.github/workflows/: ci.yml  docker.yml  publish.yml  quality.yml  test.yml  tests.yml
crawl4ai_mcp/: __init__.py  __main__.py  event_store.py  server.py
crawl4ai_mcp/config/: __init__.py  settings.py
crawl4ai_mcp/handles/: __init__.py  base.py  crawl4ai_ask.py  crawl4ai_crawl.py  crawl4ai_execute_js.py  crawl4ai_html.py  crawl4ai_md.py  crawl4ai_pdf.py  crawl4ai_screenshot.py
crawl4ai_mcp_sse_stdio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: claude_desktop_config.json  test.yaml
mcp-server-tester/: package-lock.json  package.json  test-all-tools.yaml
mcp-server-tester/src/: cli.ts
mcp-server-tester/src/schemas/: server-config-schema.json
mcp-server-tester/src/shared/core/: mcp-client.ts  types.ts
mcp-server-tester/test/e2e/: temp-eval-echo-test.yaml
mcp-server-tester/test/fixtures/: test-server-config.json
python-mcp-server/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
python-mcp-server/src/: __init__.py  event_store.py  server.py
python-mcp-server/src/config/: __init__.py  settings.py
python-mcp-server/src/handles/: base.py  crawl4ai_ask.py  crawl4ai_execute_js.py  crawl4ai_html.py  crawl4ai_pdf.py
python-mcp-server/tests/: test_server.py
scripts/: postinstall.js
tests/: README.md  conftest.py  test_integration.py  test_server.py  test_tools.py
